# streamlens

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
client/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/components/: AiChatPanel.test.tsx  AiChatPanel.tsx  StreamsEdge.test.tsx  ThemeToggle.test.tsx  TopologyNode.test.tsx  TopologyNode.tsx
client/src/hooks/: use-kafka.ts  use-mobile.test.tsx  use-theme.test.ts  use-toast.test.ts
client/src/lib/: api.ts  queryClient.test.ts
client/src/pages/: Dashboard.test.tsx  Topology.tsx  not-found.test.tsx
client/src/test/: setup.ts
container/: connect-distributed.properties  docker-compose.yml
server/: README.md  main.py  pyproject.toml
server/data/: clusters.json
server/debug/: README.md
server/src/: ai.py  storage.py  topology.py
server/src/kafka/: config.py  metrics.py  producers.py  service.py
server/tests/: README.md
server/tests/integration/: conftest.py  test_connectors.py
server/tests/unit/: test_ai.py  test_codegen.py  test_kafka_acls.py  test_kafka_config.py  test_kafka_connectors.py  test_kafka_consumers.py  test_kafka_metrics.py  test_kafka_producers.py  test_kafka_schemas.py  test_kafka_service.py  test_kafka_streams.py  test_kafka_topics.py  test_storage.py  test_topology.py
