[project]
name = "streamlens-server"
version = "1.0.0"
description = "streamLens Lineage -  API backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.10.0",
    "httpx>=0.27.0",
    "jmxquery>=0.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
anthropic = [
    "anthropic>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
